corrects contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: black;
+  color: aliceblue;
   margin: 0;
   padding: 0;
 }
@@ -22,9 +23,10 @@ h6 {
 
 img {
   width: 100%;
+  padding-top: 1rem;
 }
 
-.main-nav ul {
+nav ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -32,12 +34,12 @@ img {
   padding: 0;
 }
 
-.main-nav ul li {
+nav ul li {
   flex: 1;
   text-align: center;
 }
 
-.main-nav ul li a {
+nav ul li a {
   display: block;
   color: inherit;
   text-decoration: none;
@@ -61,11 +63,12 @@ form textarea {
 
 form button {
   background: none;
-  border: 2px solid black;
+  color: aliceblue;
+  border: 2px solid aliceblue;
   padding: 1rem;
   text-transform: uppercase;
 }
 
-.site-footer {
+footer {
   padding: 2rem 0;
 }
